# opentriage

./: .gitignore  BUILD_TASK.md  OPENTRIAGE_SPEC.md  README.md  pyproject.toml
.omc/: project-memory.json
.omc/state/: last-tool-error.json
specs/: active-remediation-failure-map.md  active-remediation.md
src/opentriage/: __init__.py  __main__.py  circuit_breaker.py  cli.py  config.py
src/opentriage/escalation/: __init__.py  channels.py  router.py
src/opentriage/health/: __init__.py  monitor.py  trends.py
src/opentriage/io/: __init__.py  reader.py  writer.py
src/opentriage/provider/: __init__.py  anthropic.py  ollama.py  openai.py  protocol.py
src/opentriage/remediation/: __init__.py  agent_handler.py  budget.py  engine.py  evidence.py  handlers.py  verification.py
src/opentriage/synthesis/: __init__.py  drafter.py
src/opentriage/triage/: __init__.py  classifier.py  engine.py  matcher.py
tests/: conftest.py  test_active_remediation.py  test_agent_handler.py  test_circuit_breaker.py  test_cli.py  test_cli_management.py  test_config.py  test_escalation.py  test_evidence.py  test_health.py  test_io.py  test_management_commands.py  test_matcher.py  test_provider.py  test_recurrence.py  test_remediation.py  test_synthesis.py  test_triage_engine.py
