[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentriage"
version = "1.0.0"
description = "Model-agnostic failure response engine for OpenLog data"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
all = ["anthropic>=0.30", "openai>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
opentriage = "opentriage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/opentriage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
